--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -4,7 +4,7 @@ providers = ["node"]
 NODE_VERSION = "18"
 
 [phases.setup]
-nixPkgs = ["nodejs_18", "npm"]
+nixPkgs = ["nodejs_18"]
 
 [phases.install]
 cmds = ["cd payload && npm install"]
